# aero

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile.server.dev  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  tokens.json  tox.ini
.github/workflows/: docs.yml  main.yml
Dockerfiles/: Dockerfile.connect-server.dev  Dockerfile.endpoint.dev  Dockerfile.proxystore.dev  Dockerfile.server.dev  Dockerfile.smtp.dev
aero/: config.py  requirements.txt  set_flow_uuids.sh
aero/app/: __init__.py  decorators.py  routes.py  run.py  utils.py
aero/automate/: policy.py  timer.py  user_flow.py
aero/globus/: auth.py  error.py  flow.py  globus_flow.py  globus_search.py  globus_transfer.py  search.py  test_flow.py  utils.py
aero/jobs/: timer.py  user_flow.py
aero/lib/: globus_flow.py  globus_search.py
aero/migrations/versions/: 050e9ef7f692_update_provenance_capture.py  0a81442faea4_major_database_schema_update.py  134ba9368422_add_hash_column_in_flows.py  29e2a4c8947b_.py  (+28 more)
aero/models/: data.py  data_file.py  data_version.py  flows.py  function.py  output.py  output_version.py  provenance.py  source.py  source_file.py  source_version.py  tag.py
aero/routes/: data.py  flow.py  output.py  provenance.py  routes.py  source.py
aero/worker/: config.py
api/: index.html
docs/: api.md  index.md
globus_compute/: storage.db
osprey/examples/: app.py  dsaas-demo.ipynb
osprey/globus_connect/: identity_mapping.json  path_restrictions.json
osprey/scripts/: start_timer.sh
osprey/server/: config.py  proxies.py  requirements.txt  scraper.py  server.py  set_flow_uuids.sh  timer.py  tokens.json
osprey/tests/: authorizer_test.py  clear_database.sh  client_test.py  conftest.py  server_test.py  test_client.py  test_worker.py  utils.py  worker_test.py
osprey/worker/: config.py  requirements.txt
scripts/: clean_all_docker.sh  prepare_start.sh  setup_globus_connect.sh  start_timer.sh  test_env.sh
tests/: __init__.py  conftest.py
tests/app/: error_test.py
tests/client/: client_test.py
tests/model/: __init__.py  data_test.py  file_test.py  flows_test.py  function_test.py  output_test.py  outputversion_test.py  provenance_test.py  source_test.py  sourcefile_test.py  sourceversion_test.py  tag_test.py  version_test.py
tests/routes/: __init__.py  conftest.py  data_routes_test.py  flow_routes_test.py  output_routes_test.py  provenance_routes_test.py  source_routes_test.py  timer_routes_test.py
tests/worker/: flow_helper_test.py
workflow/download-commit-flow/: definition.json  input.json  input_schema.json
workflow/single-function-compute/: definition.json  input.json  input_schema.json
workflow/trial/: definition.json  input_schema.json
workflow/user-flow/: definition.json  input.json  input_schema.json
(+103 files in other folders)
