[project]
name = "DSaaS"
description = "Data streams as a service"
version = "0.0.1a"
authors = [
    { name = "Valerie Hayot-Sasson", email = "vhayot@uchicago.edu"    },
    { name = "Sudershan Sridhar",    email = "sudershan@uchicago.edu" }
]
dependencies = [
    "proxystore",
    "requests",
    "pandas",
    "flask",
    "flask-sqlalchemy",
    "flask-migrate",
    "psycopg2",
    "globus_compute_sdk"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "tox",
    "black"
]
server = [
    "flask==2.1.0",
]

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["Dockerfiles*", "scripts*", "workflow*"]

[tool.ruff]
extend-select = ["Q"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
omit = [
    "tests/*",
    "osprey/server/app/decorators.py",
    "osprey/server/lib/*",
    "osprey/server/app/utils.py",
    "osprey/server/jobs/timer.py",
    "osprey/server/jobs/user_flow.py"
]
fail_under = 100
exclude_also = [
    "def search",
    "except ServiceError",
    "except Exception"
]
